# WigglePy

./: .gitignore  README.md  pyproject.toml
wiggle/: __init__.py  __main__.py  wiggler.py
